--- a/Bootscreen.html
+++ b/Bootscreen.html
@@ -1,2 +1,2 @@
 <h1>⚠WARNING-HEALTH AND SAFETY</h1>
-<br><h2>BEFORE PLAYING, READ YOUR OPERATIONS MANUAL FOR IMPORTANT 
+<br><h2>BEFORE PLAYING, READ YOUR OPERATIONS MANUAL FOR IMPORTANT INFORMATION ON YOUR HEALTH AND SAFETY.</h2>
